# signal-independence-audit

./: .gitignore  BLOG_POST.md  LICENSE  MSS_POST.md  README.md  _config.yml  pyproject.toml
case-study/: 00-readme.md  01-mfd-kill-adr-0011.md  02-bmr-kill-adr-0013.md  03-sia-framework-adr-0014.md  04-fcmfd-sia-kill-adr-0015.md  05-literature-audit.md  06-phase-5b-decision-adr-0017.md  07-path-c-kill-adr-0018.md  08-gate-1-pf-verification.md  09-path-e-routing-adr-0019.md  10-audit-corrigendum.md  11-mss-kill-adr-0027.md
examples/: fcmfd_replay.ipynb
sia/: __init__.py  orchestrator.py  screen_1_coverage.py  screen_2_lift.py  screen_3_jaccard.py  screen_4_information_split.py
sia/_internal/: __init__.py  donchian.py  funding_gate.py  macro_ema.py
tests/: test_screen_1_coverage.py  test_screen_2_lift.py  test_screen_3_jaccard.py  test_screen_4_information_split.py
