[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signal-independence-audit"
version = "0.1.0"
description = "Pre-hyperopt screening framework for testing whether a candidate signal adds information over a baseline. Methodology generalises to any signal hypothesis on any asset class; crypto case study included."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Femi Adedayo", email = "hallengray@gmail.com" }
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "mypy>=1.0",
]
notebook = [
    "jupyter>=1.0",
    "matplotlib>=3.7",
]

[project.urls]
Repository = "https://github.com/hallengray/signal-independence-audit"
"Case Study" = "https://github.com/hallengray/signal-independence-audit/tree/main/case-study"
"Blog Post" = "https://github.com/hallengray/signal-independence-audit/blob/main/BLOG_POST.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["sia*"]
exclude = ["tests*", "case-study*", "examples*"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["pandas.*", "numpy.*"]
ignore_missing_imports = true
